New edits to html file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="header">
         <nav>
-            <p>Neirah Ho</p>
+            <a href="#" id="homepage">Neirah Ho</a>
             <ul>
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">EXPERIENCE</a></li>
@@ -17,6 +17,15 @@
                 <li><a href="#">CONTACT</a></li>
             </ul>
         </nav>
+        <p id="self-intro1">Hi there, welcome to my page!<span class="wave">👋</span>
+            <br>I'm an aspiring web developer, and I love to build things, especially Lego.
+        </p>
+        <p id="self-intro2">Scroll down to learn more about me</p>
+    </div>
+    <div id="about">
+        <p id="self-intro1">Hi there, welcome to my page!<span class="wave">👋</span>
+            <br>I'm an aspiring web developer, and I love to build things, especially Lego.
+        </p>
     </div>
 </body>
 </html>
