New edits to html and css files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="header">
+    <div id="front-page">
         <nav>
             <a href="#" id="homepage">Neirah Ho</a>
             <ul>
@@ -23,9 +23,7 @@
         <p id="self-intro2">Scroll down to learn more about me</p>
     </div>
     <div id="about">
-        <p id="self-intro1">Hi there, welcome to my page!<span class="wave">👋</span>
-            <br>I'm an aspiring web developer, and I love to build things, especially Lego.
-        </p>
+        <p>lfirhweidjfjijwe</p>
     </div>
 </body>
 </html>
