--- a/index.html
+++ b/index.html
@@ -7,23 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="front-page">
-        <nav>
-            <a href="#" id="homepage">Neirah Ho</a>
+    <div class="front-page">
+        <nav class="nav-bar">
+            <a href="#" class="name">Neirah Ho</a>
             <ul>
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">EXPERIENCE</a></li>
-                <li><a href="#">PROJECTS</a></li>
+                <li><a href="#">PROJECT</a>
+                <ol>PURPLEISM</ol></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
         </nav>
-        <p id="self-intro1">Hi there, welcome to my page!<span class="wave">👋</span>
-            <br>I'm an aspiring web developer, and I love to build things, especially Lego.
+        <p class="self-intro1">Hi, my name is Neirah Ho <span class="wave">👋</span>
+            <br>I'm a second-year student at Lehigh University pursuing a Computer Science degree. During my freetime, I either build websites or Legos. Wanna see them? 
         </p>
-        <p id="self-intro2">Scroll down to learn more about me</p>
     </div>
     <div id="about">
-        <p>lfirhweidjfjijwe</p>
     </div>
 </body>
 </html>
